update EU translations
(Old svn revision: 4336)

--- a/po/eu.po
+++ b/po/eu.po
@@ -340,7 +340,7 @@ msgstr "LED"
 
 #: plugins/clock/clock.c:512
 msgid "Hour mode:"
-msgstr "Ordutegi mota"
+msgstr "Ordutegi mota:"
 
 #: plugins/clock/clock.c:519
 msgid "24 hour"
@@ -356,7 +356,7 @@ msgstr "AM/PM"
 
 #: plugins/clock/clock.c:569
 msgid "Show seconds:"
-msgstr "Erakutsi segunduak"
+msgstr "Segunduak bistarazi:"
 
 #: plugins/clock/clock.c:682
 msgid "Xfce Clock"
@@ -633,3 +633,4 @@ msgstr "Posta egiaztatzailea"
 
 #~ msgid "Show minibuttons"
 #~ msgstr "Mostrar minibotones"
+
