Add itembar and item widgets: * XfceItembar : container for XfceItem's * XfceItem : simple container to add to an itembar * XfceSeparatorItem : special XfceItem that simply shows a separator
* Make panel controls and separator item plugin use the new widgets.
* Make taskbar use new widgets


(Old svn revision: 4337)

--- a/TODO
+++ b/TODO
@@ -16,6 +16,8 @@ TODO
   - [DONE] include move handles (steal code form GtkHandlebox)
   - use properties and signals for settings
   - perhaps use interfaces or derived widgets for controls
+* Change xml parsing to use lang: properties. This allows translations to be
+  handled through gettext/intltool.
 
 Ideas
 -----
