update JA translations
(Old svn revision: 4342)

--- a/po/ja.po
+++ b/po/ja.po
@@ -9,9 +9,9 @@ msgstr ""
 "Project-Id-Version: xfce4-panel 4.2.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-01-09 13:35+0100\n"
-"PO-Revision-Date: 2005-02-17 23:14+0900\n"
+"PO-Revision-Date: 2005-02-22 02:04+0900\n"
 "Last-Translator: Daichi Kawahata <daichi.k@users.sourceforge.net>\n"
-"Language-Team: Japanese <xfce-i18n@xfce.org>\n"
+"Language-Team: xfce-users-jp <xfce-users-jp@ml.fdiary.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -70,7 +70,7 @@ msgstr "ツールチップ:"
 
 #: panel/item_dialog.c:996
 msgid "Attach menu to launcher"
-msgstr "メニューをランチャーへ付ける"
+msgstr "メニューをランチャーへ取り付ける"
 
 #: panel/item_dialog.c:1216
 msgid "Change menu item"
@@ -83,7 +83,7 @@ msgstr "削除(_R)"
 
 #: panel/item_dialog.c:1234 panel/item.c:738
 msgid "Launcher"
-msgstr "ランチャ"
+msgstr "ランチャー"
 
 #: panel/item.c:566
 msgid "Click mouse button 3 to change item"
@@ -121,7 +121,7 @@ msgstr ""
 "Xfce デスクトップ環境の一部\n"
 "http://www.xfce.org\n"
 "\n"
-"GNU GPL の下に使用できます。\n"
+"GNU GPL の下に利用できます。\n"
 "\n"
 
 #: panel/main.c:489
@@ -388,12 +388,12 @@ msgstr ""
 
 #: plugins/systembuttons/systembuttons.c:170
 msgid "Lock the screen"
-msgstr "画面をロックする"
+msgstr "画面をロックします"
 
 #: plugins/systembuttons/systembuttons.c:171
 #: plugins/systembuttons/systembuttons.c:519
 msgid "Exit"
-msgstr "終了"
+msgstr "終了します"
 
 #: plugins/systembuttons/systembuttons.c:172
 #: plugins/systembuttons/systembuttons.c:520
@@ -403,7 +403,7 @@ msgstr "設定"
 #: plugins/systembuttons/systembuttons.c:173
 #: plugins/systembuttons/systembuttons.c:521
 msgid "Info"
-msgstr "お知らせ"
+msgstr "情報"
 
 #. set names to use in option menus
 #: plugins/systembuttons/systembuttons.c:518
