Update ChangeLog and NEWS for 4.2.1
(Old svn revision: 4344)

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,14 @@
 NEWS for xfce4-panel
 ====================
 
+4.2.1
+=====
+- Save config file changes only on exit; this helps a bit when plugins crash
+  the panel.
+- Fix double click on inactive plugin in 'Add Item' dialog.
+- 64 bit fix.
+- Updated translations (Jean-François).
+
 4.2.0
 =====
 - New look with smaller move handles and new default icons.
