Use intltool to translate the contents.xml.
(Old svn revision: 4351)

--- a/AUTHORS
+++ b/AUTHORS
@@ -2,7 +2,7 @@ Jasper Huijsmans <huysmans@users.sourceforge.net>
 Olivier Fourdan <fourdan@xfce.org>
 Edscott Wilson Garcia <edscott@imp.mx>
 Biju Chacko <botsie@myrealbox.com>
-Benedikt Meurer <benedikt.meurer@unix-ag.uni-siegen.de>
+Benedikt Meurer <benny@xfce.org>
 Bernhard Walle <Bernhard.Walle@gmx.de>
 Eduard Rocatello <master@spine-group.org>
 Erik Touve <etouve@earthlink.net>
