--- a/po/es_MX.po
+++ b/po/es_MX.po
@@ -80,7 +80,7 @@ msgstr "Cambiar elemento del menú"
 #. add buttons
 #: ../panel/item_dialog.c:1179 ../panel/controls.c:751
 msgid "_Remove"
-msgstr "_Remover"
+msgstr "_Eliminar"
 
 #: ../panel/item_dialog.c:1191
 msgid "Launcher"
@@ -251,13 +251,13 @@ msgstr "Es imposible registrar la bandeja de iconos: %s"
 #. * %Y  : four digit year
 #.
 #: ../taskbar/xftaskbar.c:619
-#, fuzzy
+#, 
 msgid "%A %d %B %Y"
-msgstr "%A, %d %B %Y"
+msgstr "%A %d %B %Y"
 
 #: ../taskbar/xftaskbar.c:640
 msgid "%H:%M"
-msgstr ""
+msgstr "%H:%M"
 
 #: ../taskbar/xftaskbar.c:913 ../settings/xftaskbar_plugin.c:696
 #: ../settings/xftaskbar_plugin.c:706 ../settings/xftaskbar_plugin.c:987
@@ -270,16 +270,15 @@ msgstr "No se puede crear el canal MCS cliente"
 
 #: ../iconbox/iconbox.c:568
 msgid "Xfce Iconbox"
-msgstr ""
+msgstr "Caja de íconos Xfce"
 
 #: ../iconbox/iconbox.c:576
 msgid "Developer"
-msgstr ""
+msgstr "Desarrollador"
 
 #: ../iconbox/iconbox.c:612
-#, fuzzy
 msgid "_About"
-msgstr "_Acerca de Xfce"
+msgstr "_Acerca de"
 
 #: ../settings/xfce_settings_dialog.c:87 ../settings/xftaskbar_plugin.c:480
 #: ../settings/xftaskbar_plugin.c:511
@@ -366,9 +365,8 @@ msgid "_Bottom"
 msgstr "Abajo"
 
 #: ../settings/xftaskbar_plugin.c:422
-#, fuzzy
 msgid "Alignment:"
-msgstr "Alineación"
+msgstr "Alineación:"
 
 #: ../settings/xftaskbar_plugin.c:429
 msgid "_Left"
@@ -388,9 +386,8 @@ msgid "Size"
 msgstr "Tamaño"
 
 #: ../settings/xftaskbar_plugin.c:474
-#, fuzzy
 msgid "Height:"
-msgstr "Altura :"
+msgstr "Altura:"
 
 #: ../settings/xftaskbar_plugin.c:505
 msgid "Width:"
@@ -398,7 +395,7 @@ msgstr "Ancho:"
 
 #: ../settings/xftaskbar_plugin.c:541
 msgid "_Shrink to fit"
-msgstr ""
+msgstr "Encoger al tamaño"
 
 #. Autohide
 #: ../settings/xftaskbar_plugin.c:561
@@ -411,13 +408,12 @@ msgstr "Esconder automáticamente la barra de tareas"
 
 #. tasklist
 #: ../settings/xftaskbar_plugin.c:583
-#, fuzzy
 msgid "Tasklist"
-msgstr "Tareas"
+msgstr "Lista de tareas"
 
 #: ../settings/xftaskbar_plugin.c:592
 msgid "Show tasklist"
-msgstr ""
+msgstr "Mostrar tareas"
 
 #: ../settings/xftaskbar_plugin.c:604
 msgid "Show tasks from _all workspaces"
@@ -443,50 +439,48 @@ msgstr "Mostrar paginador en la barra de tareas"
 #. status area
 #: ../settings/xftaskbar_plugin.c:641
 msgid "Status area"
-msgstr ""
+msgstr "Área de información"
 
 #: ../settings/xftaskbar_plugin.c:650
-#, fuzzy
 msgid "Show _notification icons"
-msgstr "Mostrar nombres de aplicaciones"
+msgstr "Mostrar íconos de notificación"
 
 #: ../settings/xftaskbar_plugin.c:657
 msgid "Show _time"
-msgstr ""
+msgstr "Mostrar tiempo"
 
 #: ../settings/xftaskbar_plugin.c:718
 msgid "General"
-msgstr ""
+msgstr "General"
 
 #: ../settings/xftaskbar_plugin.c:729
 msgid "Components"
-msgstr ""
+msgstr "Componentes"
 
 #: ../settings/iconbox_plugin.c:629
 msgid "Icon size"
-msgstr ""
+msgstr "Tamaño de ícono"
 
 #: ../settings/iconbox_plugin.c:691
-#, fuzzy
 msgid "_Show only minimized applications"
-msgstr "Mostrar nombres de aplicaciones"
+msgstr "Mostrar únicamente tareas minimizadas"
 
 #: ../settings/iconbox_plugin.c:754
 msgid "Transparency"
-msgstr ""
+msgstr "Transparencia"
 
 #: ../settings/iconbox_plugin.c:762
 msgid "None"
-msgstr ""
+msgstr "Ninguno"
 
 #: ../settings/iconbox_plugin.c:777
 msgid "Full"
-msgstr ""
+msgstr "Completo"
 
 #: ../settings/iconbox_plugin.c:831 ../settings/iconbox_plugin.c:841
 #: ../settings/iconbox_plugin.c:992
 msgid "Iconbox"
-msgstr ""
+msgstr "Caja de íconos"
 
 #. Use format characters from strftime(3)
 #. * to get the proper string for your locale.
@@ -636,77 +630,68 @@ msgid "Mail checker"
 msgstr "Revisador de correo"
 
 #: ../settings/xfce-panel-settings.desktop.in.h:1
-#, fuzzy
 msgid "Panel Settings"
-msgstr "Configuración del panel de Xfce"
+msgstr "Configuración del panel"
 
 #: ../settings/xfce-panel-settings.desktop.in.h:2
-#, fuzzy
 msgid "Xfce 4 Panel Settings"
-msgstr "Configuración del panel de Xfce"
+msgstr "Configuración del panel de Xfce4"
 
 #: ../settings/xfce-iconbox-settings.desktop.in.h:1
-#, fuzzy
 msgid "Iconbox Settings"
-msgstr "Configuración del panel de Xfce"
+msgstr "Configuración de la caja de íconos"
 
 #: ../settings/xfce-iconbox-settings.desktop.in.h:2
-#, fuzzy
 msgid "Xfce 4 Iconbox Settings"
-msgstr "Configuración del panel de Xfce"
+msgstr "Configuración de la caja de íconos  de Xfce4"
 
 #: ../settings/xfce-taskbar-settings.desktop.in.h:1
-#, fuzzy
 msgid "Taskbar Settings"
-msgstr "Barra de Tareas"
+msgstr "Configuración de la barra de tareas"
 
 #: ../settings/xfce-taskbar-settings.desktop.in.h:2
-#, fuzzy
 msgid "Xfce 4 Taskbar Settings"
-msgstr "Configuración del panel de Xfce"
+msgstr "Configuración de la barra de tareas de Xfce4"
 
 #: ../config/contents.xml.in.h:1
 msgid "Drag file to print"
-msgstr ""
+msgstr "Arrastre archivo para imprimir"
 
 #: ../config/contents.xml.in.h:2
-#, fuzzy
 msgid "File manager"
-msgstr "Administración de archivos"
+msgstr "Administrador de archivos"
 
 #: ../config/contents.xml.in.h:3
 msgid "Find and run applications"
-msgstr ""
+msgstr "Encontrar y ejecutar programa"
 
 #: ../config/contents.xml.in.h:4
 msgid "Konqueror File Manager"
-msgstr ""
+msgstr "Administrador de archivos de KDE"
 
 #: ../config/contents.xml.in.h:5
 msgid "Manual"
-msgstr ""
+msgstr "Manual"
 
 #: ../config/contents.xml.in.h:6
 msgid "Mozilla Web Browser"
-msgstr ""
+msgstr "Navegador Mozilla"
 
 #: ../config/contents.xml.in.h:7
 msgid "Music player"
-msgstr ""
+msgstr "Toca música"
 
 #: ../config/contents.xml.in.h:8
 msgid "Nautilus File Manager"
-msgstr ""
+msgstr "Administrador de archivos Nautilus"
 
 #: ../config/contents.xml.in.h:9
-#, fuzzy
 msgid "Printer Management"
-msgstr "Administración de archivos"
+msgstr "Administración de impresoras"
 
 #: ../config/contents.xml.in.h:10
-#, fuzzy
 msgid "Settings"
-msgstr "Configuración del panel de Xfce"
+msgstr "Configuración"
 
 #~ msgid "Menu"
 #~ msgstr "Menú"
