update JA translations
(Old svn revision: 4359)

--- a/po/ja.po
+++ b/po/ja.po
@@ -2,15 +2,15 @@
 # Copyright (C) 2003-2005 Olivier Fourdan
 # This file is distributed under the same license as the xfce4-panel package.
 # Zhao Ji <zhao-ji@awz.ne.jp>, 2003-2004.
-# Daichi Kawahata <daichi.k@users.sourceforge.net>, 2005.
+# Daichi Kawahata <daichik@users.sourceforge.net>, 2005.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-panel 4.2.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-01-09 13:35+0100\n"
-"PO-Revision-Date: 2005-02-22 02:04+0900\n"
-"Last-Translator: Daichi Kawahata <daichi.k@users.sourceforge.net>\n"
+"PO-Revision-Date: 2005-03-08 21:37+0900\n"
+"Last-Translator: Daichi Kawahata <daichik@users.sourceforge.net>\n"
 "Language-Team: xfce-users-jp <xfce-users-jp@ml.fdiary.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -18,7 +18,7 @@ msgstr ""
 
 #: panel/xfce_support.c:557
 msgid "Select file"
-msgstr "ファイル選択"
+msgstr "ファイルを選択して下さい"
 
 #: panel/settings.c:179
 msgid "No data was found. The panel will be empty."
@@ -38,7 +38,7 @@ msgstr "アイテムを削除するとポップアップメニューも削除さ
 
 #: panel/item_dialog.c:125
 msgid "Select command"
-msgstr "コマンド選択"
+msgstr "コマンドを選択して下さい"
 
 #: panel/item_dialog.c:269
 msgid "Command:"
@@ -46,11 +46,11 @@ msgstr "コマンド:"
 
 #: panel/item_dialog.c:312
 msgid "Run in _terminal"
-msgstr "ターミナルで実行(_T)"
+msgstr "ターミナルで実行する(_T)"
 
 #: panel/item_dialog.c:330
 msgid "Use startup _notification"
-msgstr "起動通知を使用(_N)"
+msgstr "起動通知を使用する(_N)"
 
 #: panel/item_dialog.c:516
 msgid "Other Icon"
@@ -58,7 +58,7 @@ msgstr "その他のアイコン"
 
 #: panel/item_dialog.c:627
 msgid "Drag file onto this frame to change the icon"
-msgstr "アイコンを変更するにはこのフレームへファイルをドラッグして下さい"
+msgstr "アイコンを変更するには、このフレームへファイルをドラッグして下さい"
 
 #: panel/item_dialog.c:939
 msgid "Caption:"
@@ -87,7 +87,7 @@ msgstr "ランチャー"
 
 #: panel/item.c:566
 msgid "Click mouse button 3 to change item"
-msgstr "アイテムを変更するにはマウスの右ボタンをクリックして下さい"
+msgstr "アイテムを変更するには、マウスの一番右のボタンをクリックして下さい"
 
 #: panel/item.c:591
 msgid "Add launcher"
@@ -190,7 +190,7 @@ msgstr "ファイル管理"
 
 #: panel/icons.c:66
 msgid "Utilities"
-msgstr "実用"
+msgstr "ユーティリティ"
 
 #: panel/icons.c:67
 msgid "Games"
@@ -374,7 +374,7 @@ msgstr "グラフィカルページャ"
 
 #: plugins/switcher/switcher.c:698
 msgid "Desktop switcher"
-msgstr "デスクトップ切替プログラム"
+msgstr "デスクトップ切替えプログラム"
 
 #: plugins/systembuttons/systembuttons.c:85
 msgid ""
@@ -441,11 +441,11 @@ msgstr "新規メール受信時のコマンド:"
 
 #: plugins/mailcheck/mailcheck.c:889
 msgid "Command to run when new mail arrives"
-msgstr "新しいメールが到着した時に実行されるコマンド"
+msgstr "新しいメールが到着した時に実行されるコマンドです"
 
 #: plugins/mailcheck/mailcheck.c:919
 msgid "Command to run when the button on the panel is clicked"
-msgstr "パネル上のボタンがクリックされた時に実行されるコマンド"
+msgstr "パネル上のボタンがクリックされた時に実行されるコマンドです"
 
 #: plugins/mailcheck/mailcheck.c:940
 msgid "Interval (sec):"
