update JA translations
(Old svn revision: 4360)

--- a/po/ja.po
+++ b/po/ja.po
@@ -6,10 +6,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4-panel 4.2.0\n"
+"Project-Id-Version: xfce4-panel 4.2.1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-01-09 13:35+0100\n"
-"PO-Revision-Date: 2005-03-08 21:37+0900\n"
+"PO-Revision-Date: 2005-03-11 07:10+0900\n"
 "Last-Translator: Daichi Kawahata <daichik@users.sourceforge.net>\n"
 "Language-Team: xfce-users-jp <xfce-users-jp@ml.fdiary.net>\n"
 "MIME-Version: 1.0\n"
@@ -393,7 +393,7 @@ msgstr "画面をロックします"
 #: plugins/systembuttons/systembuttons.c:171
 #: plugins/systembuttons/systembuttons.c:519
 msgid "Exit"
-msgstr "終了します"
+msgstr "終了"
 
 #: plugins/systembuttons/systembuttons.c:172
 #: plugins/systembuttons/systembuttons.c:520
@@ -412,11 +412,11 @@ msgstr "ロック"
 
 #: plugins/systembuttons/systembuttons.c:550
 msgid "Button 1:"
-msgstr "ボタン1:"
+msgstr "ボタン１:"
 
 #: plugins/systembuttons/systembuttons.c:565
 msgid "Button 2:"
-msgstr "ボタン2:"
+msgstr "ボタン２:"
 
 #. checkbox
 #: plugins/systembuttons/systembuttons.c:579
