This commit was manufactured by cvs2svn to create tag 'xfce_4_2_1'.
(Old svn revision: 4364)

--- a/po/lt.po
+++ b/po/lt.po
@@ -1,27 +1,29 @@
 # Lithuania translation of xfce4-panel
 # Copyright (C) 2003 Free Software Foundation, Inc.
 # This file is distributed under the same license as the xfce4-panel package.
-# Mantas <zaz@xxx.lt>, 2003.
+# Mantas <zaz@xxx.lt>, 2003 - 2005,
+# Rimas Kudelis <rq@akl.lt>, 2005.
+# 
 # 
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4-panel 3.99.2\n"
+"Project-Id-Version: xfce4-panel 4.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-10-11 18:28+0200\n"
-"PO-Revision-Date: 2004-10-29 22:44+0300\n"
-"Last-Translator: Mantas <zaz@xxx.lt>\n"
-"Language-Team: Lithuania <zaz@xxx.lt>\n"
+"PO-Revision-Date: 2005-01-20 22:25+0200\n"
+"Last-Translator: Rimas Kudelis <rq@akl.lt>\n"
+"Language-Team: Lithuanian <komp_lt@konferencijos.lt>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=iso-8859-13\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit"
 
 #: panel/xfce_support.c:516
 msgid "Select file"
-msgstr "Pasirinkite failà"
+msgstr "Parinkite bylÄ…"
 
 #: panel/settings.c:179
 msgid "No data was found. The panel will be empty."
-msgstr "Duomenğ nerasta. Skydelis bus tuğèias."
+msgstr "DuomenÅ³ nerasta. Skydelis bus tuÅ¡Äias."
 
 #: panel/controls_dialog.c:89 panel/item_dialog.c:1157
 msgid "Position:"
@@ -29,15 +31,15 @@ msgstr "Pozicija:"
 
 #: panel/controls_dialog.c:153
 msgid "Item properties"
-msgstr "Elemento savybës"
+msgstr "Elemento savybÄ—s"
 
 #: panel/controls_dialog.c:207 panel/controls.c:691
 msgid "Removing the item will also remove its popup menu."
-msgstr "Pağalindami elementà kartu pağalinsite jo iğskleidşiamà meniu."
+msgstr "PaÅ¡alindami elementÄ…, kartu sunaikinsite ir jo iÅ¡skleidÅ¾iamÄ… meniu."
 
 #: panel/item_dialog.c:123 panel/item_dialog.c:551
 msgid "Select command"
-msgstr "Pasirinkite komandà"
+msgstr "Parinkite komandÄ…"
 
 #: panel/item_dialog.c:264
 msgid "Command:"
@@ -45,19 +47,19 @@ msgstr "Komanda:"
 
 #: panel/item_dialog.c:307
 msgid "Run in _terminal"
-msgstr "Paleisti _terminale"
+msgstr "Vykdyti _terminale"
 
 #: panel/item_dialog.c:325
 msgid "Use startup _notification"
-msgstr "Naudoti paleisties pra_neğimà"
+msgstr "I_nformuoti apie vykdymÄ…"
 
 #: panel/item_dialog.c:511
 msgid "Other Icon"
-msgstr "Kita piktograma"
+msgstr "Kita ikona"
 
 #: panel/item_dialog.c:622
 msgid "Drag file onto this frame to change the icon"
-msgstr "Norëdami pakeisti piktogramà, tempkite failà ant ğio rëmo "
+msgstr "NorÄ—dami pakeisti ikonÄ…, tempkite bylÄ… Ä¯ Å¡Ä¯ laukÄ…"
 
 #: panel/item_dialog.c:917
 msgid "Caption:"
@@ -65,20 +67,20 @@ msgstr "Pavadinimas:"
 
 #: panel/item_dialog.c:946
 msgid "Tooltip:"
-msgstr "Patarimas:"
+msgstr "PaaiÅ¡kinimas:"
 
 #: panel/item_dialog.c:974
 msgid "Attach menu to launcher"
-msgstr "Pridëti meniu á leistukà"
+msgstr "PridÄ—ti leistuko meniu"
 
 #: panel/item_dialog.c:1194
 msgid "Change menu item"
-msgstr "Pakeisti meniu elementà"
+msgstr "Pakeisti meniu elementÄ…"
 
 #. add buttons
 #: panel/item_dialog.c:1200 panel/controls.c:728
 msgid "_Remove"
-msgstr "_Pağalinti"
+msgstr "_PaÅ¡alinti"
 
 #: panel/item_dialog.c:1212 panel/item.c:668
 msgid "Launcher"
@@ -86,19 +88,19 @@ msgstr "Leistukas"
 
 #: panel/item.c:496
 msgid "Click mouse button 3 to change item"
-msgstr "Norëdami pakeisti elementà, spauskite viduriná pelës mygtukà"
+msgstr "NorÄ—dami pakeisti elementÄ…, spauskite vidurinÄ¯ pelÄ—s mygtukÄ…"
 
 #: panel/item.c:521
 msgid "Add launcher"
-msgstr "Ádëti leistukà"
+msgstr "PridÄ—ti leistukÄ…"
 
 #: panel/item.c:526
 msgid "Add new item"
-msgstr "Ádëti naujà leistukà"
+msgstr "PridÄ—ti elementÄ…"
 
 #: panel/main.c:121
 msgid "Are you sure you want to exit?"
-msgstr "Ar tikrai norite iğeiti?"
+msgstr "Ar tikrai norite iÅ¡eiti?"
 
 #: panel/main.c:401
 #, c-format
@@ -114,70 +116,70 @@ msgid ""
 "\n"
 msgstr ""
 "\n"
-" The Xfce Skydelis\n"
+" Xfce skydelis\n"
 " Versija %s\n"
 "\n"
-" Dalis Xfce Aplinkos\n"
+" Xfce aplinkos dalis\n"
 " http://www.xfce.org\n"
 "\n"
-" Licencijuota pagal GNU GPL.\n"
+" Platinamas pagal GNU GPL licencijÄ….\n"
 "\n"
 
 #: panel/main.c:488
 #, c-format
 msgid "%s: Successfully started without session management"
-msgstr "%s: Sëkmingai paleista be sesijø valdymo"
+msgstr "%s: SÄ—kmingai paleista be sesijÅ³ valdymo"
 
 #: panel/main.c:493
 #, c-format
 msgid "%s: Successfully started with session management"
-msgstr "%s: Sëkmingai paleista su sesijø valdymu"
+msgstr "%s: SÄ—kmingai paleista su sesijÅ³ valdymu"
 
 #: panel/controls.c:646
 #, c-format
 msgid "Could not create panel item \"%s\"."
-msgstr "Neámanoma sukurti skydelio elemento \"%s\"."
+msgstr "NeÄ¯manoma sukurti skydelio elemento â€%sâ€œ."
 
 #: panel/controls.c:723 panel/panel.c:579
 msgid "_Properties..."
-msgstr "/_Savybës..."
+msgstr "_SavybÄ—sâ€¦"
 
 #: panel/controls.c:737 panel/panel.c:569
 msgid "Add _new item"
-msgstr "Pridëti _naujà elementà"
+msgstr "PridÄ—ti _naujÄ… elementÄ…"
 
 #: panel/controls.c:1020
 msgid "This item has no configuration options"
-msgstr "Ğis elementas neturi parinkties parametrø "
+msgstr "Å is elementas neturi derinamÅ³ savybiÅ³"
 
 #: panel/panel.c:560 panel/panel.c:961 settings/xfce_settings_plugin.c:86
 #: settings/xfce_settings_dialog.c:449
 msgid "Xfce Panel"
-msgstr "Xfce Skydelis"
+msgstr "Xfce skydelis"
 
 #: panel/panel.c:584
 msgid "_About Xfce"
-msgstr "/_Apie Xfce"
+msgstr "_Apie Xfce"
 
 #: panel/panel.c:589
 msgid "_Help"
-msgstr "/Pa_galba"
+msgstr "_Pagalba"
 
 #: panel/panel.c:598
 msgid "_Lock screen"
-msgstr "/_Uşrakinti ekranà"
+msgstr "_UÅ¾rakinti ekranÄ…"
 
 #: panel/panel.c:603
 msgid "_Restart"
-msgstr "/_Perkrauti"
+msgstr "Per_leisti"
 
 #: panel/panel.c:612
 msgid "E_xit"
-msgstr "Iğ_eiti"
+msgstr "IÅ¡_eiti"
 
 #: panel/icons.c:60
 msgid "Default"
-msgstr "Áprastas"
+msgstr "Numatytasis"
 
 #: panel/icons.c:61
 msgid "Editor"
@@ -185,23 +187,23 @@ msgstr "Redaktorius"
 
 #: panel/icons.c:62
 msgid "File management"
-msgstr "Failø valdymas"
+msgstr "BylÅ³ tvarkyklÄ—"
 
 #: panel/icons.c:63
 msgid "Utilities"
-msgstr "Pagalbinës programos"
+msgstr "PagalbinÄ—s programos"
 
 #: panel/icons.c:64
 msgid "Games"
-msgstr "Şaidimai"
+msgstr "Å½aidimai"
 
 #: panel/icons.c:65
 msgid "Help browser"
-msgstr "Pagalbos narğyklë"
+msgstr "Pagalbos narÅ¡yklÄ—"
 
 #: panel/icons.c:66
 msgid "Multimedia"
-msgstr " Daugialypë terpë"
+msgstr "Multimedija"
 
 #: panel/icons.c:67
 msgid "Network"
@@ -217,7 +219,7 @@ msgstr "Spausdintuvas"
 
 #: panel/icons.c:70
 msgid "Productivity"
-msgstr "Produktyvumas"
+msgstr "Ä®rankiai"
 
 #: panel/icons.c:71
 msgid "Sound"
@@ -229,7 +231,7 @@ msgstr "Terminalas"
 
 #: panel/mcs_client.c:170
 msgid "Settings manager not available"
-msgstr "Nëra nustatymø tvarkyklë"
+msgstr "NustatymÅ³ tvarkyklÄ— neprieinama"
 
 #: panel/popup.c:267
 msgid "Menu"
@@ -237,7 +239,7 @@ msgstr "Meniu"
 
 #: settings/xfce_settings_dialog.c:88
 msgid "Small"
-msgstr "Maşas"
+msgstr "MaÅ¾as"
 
 #: settings/xfce_settings_dialog.c:92
 msgid "Medium"
@@ -249,7 +251,7 @@ msgstr "Didelis"
 
 #: settings/xfce_settings_dialog.c:100
 msgid "Huge"
-msgstr "Didşiulis"
+msgstr "DidÅ¾iausias"
 
 #: settings/xfce_settings_dialog.c:176
 msgid "Horizontal"
@@ -261,19 +263,19 @@ msgstr "Vertikalus"
 
 #: settings/xfce_settings_dialog.c:222
 msgid "Left"
-msgstr "Kairë"
+msgstr "KairÄ—je"
 
 #: settings/xfce_settings_dialog.c:226
 msgid "Right"
-msgstr "Değinë"
+msgstr "DeÅ¡inÄ—je"
 
 #: settings/xfce_settings_dialog.c:230
 msgid "Top"
-msgstr "Virğutinis"
+msgstr "VirÅ¡uje"
 
 #: settings/xfce_settings_dialog.c:234
 msgid "Bottom"
-msgstr "Apatinis"
+msgstr "ApaÄioje"
 
 #: settings/xfce_settings_dialog.c:269
 msgid "Panel size:"
@@ -285,15 +287,15 @@ msgstr "Skydelio orientacija:"
 
 #: settings/xfce_settings_dialog.c:304
 msgid "Popup position:"
-msgstr "Iğskleişiamo meniu pozicija:"
+msgstr "Leistuko meniu vieta:"
 
 #: settings/xfce_settings_dialog.c:343
 msgid "Always on top:"
-msgstr "Visada virğuje:"
+msgstr "Visada virÅ¡uje:"
 
 #: settings/xfce_settings_dialog.c:396
 msgid "Autohide:"
-msgstr "Autopaslëpimas"
+msgstr "AutomatiÅ¡kai slÄ—ptis"
 
 #: settings/xfce_settings_dialog.c:466
 msgid "Xfce Panel Settings"
@@ -301,11 +303,11 @@ msgstr "Xfce skydelio nustatymai"
 
 #: settings/xfce_settings_dialog.c:476
 msgid "Appearance"
-msgstr "Vaizdas"
+msgstr "IÅ¡vaizda"
 
 #: settings/xfce_settings_dialog.c:491
 msgid "Behaviour"
-msgstr "Elgesys"
+msgstr "Elgsena"
 
 #. Use format characters from strftime(3)
 #. * to get the proper string for your locale.
@@ -317,11 +319,11 @@ msgstr "Elgesys"
 #.
 #: plugins/clock/clock.c:202
 msgid "%A, %d %B %Y"
-msgstr "%A, %-d %B %Y"
+msgstr "%Y m. %B %-d d., %A"
 
 #: plugins/clock/clock.c:429
 msgid "Clock type:"
-msgstr "Laikrodşio tipas:"
+msgstr "LaikrodÅ¾io tipas:"
 
 #: plugins/clock/clock.c:442
 msgid "Analog"
@@ -337,7 +339,7 @@ msgstr "LED"
 
 #: plugins/clock/clock.c:512
 msgid "Hour mode:"
-msgstr "Valandø veiksena"
+msgstr "ValandÅ³ veiksena:"
 
 #: plugins/clock/clock.c:519
 msgid "24 hour"
@@ -345,7 +347,7 @@ msgstr "24 valandos"
 
 #: plugins/clock/clock.c:525
 msgid "12 hour"
-msgstr "12 valandø"
+msgstr "12 valandÅ³"
 
 #: plugins/clock/clock.c:531
 msgid "AM/PM"
@@ -361,19 +363,19 @@ msgstr "Xfce laikrodis"
 
 #: plugins/pager/pager.c:311
 msgid "Number of rows:"
-msgstr "Eiluèiø skaièius:"
+msgstr "EiluÄiÅ³ skaiÄius:"
 
 #: plugins/pager/pager.c:313
 msgid "Number of columns:"
-msgstr "Stulpeliø skaièius:"
+msgstr "StulpeliÅ³ skaiÄius:"
 
 #: plugins/pager/pager.c:360
 msgid "Graphical pager"
-msgstr "Grafinis praneğimø gaviklis"
+msgstr "Grafinis darbalaukiÅ³ keitiklis"
 
 #: plugins/switcher/switcher.c:698
 msgid "Desktop switcher"
-msgstr "Darbalaukio perjungiklis"
+msgstr "DarbalaukiÅ³ perjungiklis"
 
 #: plugins/systembuttons/systembuttons.c:85
 msgid ""
@@ -381,23 +383,23 @@ msgid ""
 "\n"
 "Ask your system administrator for more information"
 msgstr ""
-"Priega prie sistemos sàrankos iğjungta.\n"
+"Priega prie derinimo sistemos iÅ¡jungta.\n"
 "\n"
-"Paklauskite jûsø kompiuterio administratoriaus norëdami suşinoti daugiau informacijos"
+"Daugiau informacijos suteiks JÅ«sÅ³ kompiuterio administratorius"
 
 #: plugins/systembuttons/systembuttons.c:170
 msgid "Lock the screen"
-msgstr "Uşrakinti ekranà"
+msgstr "UÅ¾rakinti ekranÄ…"
 
 #: plugins/systembuttons/systembuttons.c:171
 #: plugins/systembuttons/systembuttons.c:519
 msgid "Exit"
-msgstr "Iğeiti"
+msgstr "IÅ¡eiti"
 
 #: plugins/systembuttons/systembuttons.c:172
 #: plugins/systembuttons/systembuttons.c:520
 msgid "Setup"
-msgstr "Sàranka"
+msgstr "Nustatymai"
 
 #: plugins/systembuttons/systembuttons.c:173
 #: plugins/systembuttons/systembuttons.c:521
@@ -407,20 +409,20 @@ msgstr "Informacija"
 #. set names to use in option menus
 #: plugins/systembuttons/systembuttons.c:518
 msgid "Lock"
-msgstr "Uşrakinti"
+msgstr "UÅ¾rakinti"
 
 #: plugins/systembuttons/systembuttons.c:550
 msgid "Button 1:"
-msgstr "Mygtukas 1"
+msgstr "Mygtukas 1:"
 
 #: plugins/systembuttons/systembuttons.c:565
 msgid "Button 2:"
-msgstr "Mygtukas 2"
+msgstr "Mygtukas 2:"
 
 #. checkbox
 #: plugins/systembuttons/systembuttons.c:579
 msgid "_Hide"
-msgstr "Pa_slëpti"
+msgstr "Pa_slÄ—pti"
 
 #: plugins/systembuttons/systembuttons.c:616
 msgid "System buttons"
@@ -428,23 +430,23 @@ msgstr "Sisteminiai mygtukai"
 
 #: plugins/separator/separator.c:155
 msgid "Separator"
-msgstr "Skyriklis"
+msgstr "Skirtukas"
 
 #: plugins/mailcheck/mailcheck.c:787
 msgid "Mail box:"
-msgstr "Pağto dëşutë:"
+msgstr "PaÅ¡to dÄ—Å¾utÄ—:"
 
 #: plugins/mailcheck/mailcheck.c:824
 msgid "New mail command:"
-msgstr "Nauja pağto komanda:"
+msgstr "Gavus laiÅ¡kÄ…, vykdyti:"
 
 #: plugins/mailcheck/mailcheck.c:838
 msgid "Command to run when new mail arrives"
-msgstr "Komanda,kurià paleisti,kai naujos pağto şinutës ateina"
+msgstr "Komanda, vykdoma atÄ—jus naujiems laiÅ¡kams"
 
 #: plugins/mailcheck/mailcheck.c:868
 msgid "Command to run when the button on the panel is clicked"
-msgstr "Komanda kurià paleisti kai skydelio mygtukas paspaustas"
+msgstr "Komanda, vykdoma paspaudus skydelio mygtukÄ…"
 
 #: plugins/mailcheck/mailcheck.c:889
 msgid "Interval (sec):"
@@ -452,123 +454,5 @@ msgstr "Intervalas (sek):"
 
 #: plugins/mailcheck/mailcheck.c:965
 msgid "Mail checker"
-msgstr "Pağto tikrinimas"
+msgstr "PaÅ¡to tikrintuvÄ—"
 
-#~ msgid "Remove"
-#~ msgstr "PaÅ¡alinti"
-
-#~ msgid "Show two buttons:"
-#~ msgstr "Rodyti du mygtukus:"
-
-#~ msgid "Change item"
-#~ msgstr "Pakeisti elementÄ…"
-
-#~ msgid "Menu:"
-#~ msgstr "Meniu:"
-
-#~ msgid "/Xfce Panel"
-#~ msgstr "/Xfce Skydelis"
-
-#~ msgid "/Add _new item"
-#~ msgstr "/PridÄ—ti _naujÄ… elementÄ…"
-
-#~ msgid "/_Properties..."
-#~ msgstr "/_SavybÄ—s..."
-
-#~ msgid "Select icon"
-#~ msgstr "Pasirinkite piktogramÄ…"
-
-#~ msgid "Icon:"
-#~ msgstr "Piktograma:"
-
-#~ msgid "Icon Preview"
-#~ msgstr "Pikrogramos PerÅ¾iÅ«ra"
-
-#~ msgid ""
-#~ "Your window manager does not seem to support the new window manager hints "
-#~ "as defined on http://www.freedesktop.org. \n"
-#~ "Some Xfce features may not work as intended."
-#~ msgstr ""
-#~ "Atrodo, kad jÅ«sÅ³ langÅ³ tvarkyklÄ— nepalaiko naujÅ³ langÅ³ tvarkykliÅ³ patarimÅ³ apibrÄ—Å¾tÅ³ tinklalapyje http://www.freedesktop.org. \n"
-#~ "Keletas Xfce sudÄ—tiniÅ³ daliÅ³ gali neveikti kaip numatyta."
-
-#~ msgid "/_Settings manager"
-#~ msgstr "/Nuo_statÅ³ tvarkyklÄ—"
-
-#~ msgid "Tiny"
-#~ msgstr "MaÅ¾ytis"
-
-#~ msgid "Icon theme:"
-#~ msgstr "Piktogramos tema"
-
-#~ msgid "Panel layer:"
-#~ msgstr "Skydelio iÅ¡dÄ—stymas:"
-
-#~ msgid "Normal"
-#~ msgstr "Normalus"
-
-#~ msgid "Center the panel:"
-#~ msgstr "Centruoti skydelÄ¯"
-
-#~ msgid "Set"
-#~ msgstr "Nustatyti"
-
-#~ msgid "Position"
-#~ msgstr "Pozicija"
-
-#~ msgid "Sunday"
-#~ msgstr "Skemadienis"
-
-#~ msgid "Monday"
-#~ msgstr "Pirmadienis"
-
-#~ msgid "Tuesday"
-#~ msgstr "Antradienis"
-
-#~ msgid "Wednesday"
-#~ msgstr "TreÃ„Âiadienis"
-
-#~ msgid "Thursday"
-#~ msgstr "Ketvirtadienis"
-
-#~ msgid "Friday"
-#~ msgstr "Penktadienis"
-
-#~ msgid "Saturday"
-#~ msgstr "Ã…Â eÃ…â€tadienis"
-
-#~ msgid "January"
-#~ msgstr "Sausis"
-
-#~ msgid "February"
-#~ msgstr "Vasaris"
-
-#~ msgid "March"
-#~ msgstr "Kovas"
-
-#~ msgid "April"
-#~ msgstr "Balandis"
-
-#~ msgid "May"
-#~ msgstr "GeguÃ…Â¾Ã„Â—"
-
-#~ msgid "June"
-#~ msgstr "BirÃ…Â¾elis"
-
-#~ msgid "July"
-#~ msgstr "Liepa"
-
-#~ msgid "August"
-#~ msgstr "RugpjÃ…Â«tis"
-
-#~ msgid "September"
-#~ msgstr "RugsÃ„Â—jis"
-
-#~ msgid "October"
-#~ msgstr "Spalis"
-
-#~ msgid "November"
-#~ msgstr "Lapkritis"
-
-#~ msgid "December"
-#~ msgstr "Gruodis"
