Add context to some strings
(Old svn revision: 4365)

--- a/po/nl.po
+++ b/po/nl.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: xfce4 VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-03-08 16:53+0100\n"
+"POT-Creation-Date: 2005-03-12 22:33+0100\n"
 "PO-Revision-Date: 2004-08-22 16:00+0200\n"
 "Last-Translator: Jasper Huijsmans <jasper@xfce.org>\n"
 "Language-Team: Nederlands <nl@li.org>\n"
@@ -565,40 +565,52 @@ msgstr ""
 msgid "Lock the screen"
 msgstr "Scherm beveiligen"
 
-#: plugins/systembuttons/systembuttons.c:171
-#: plugins/systembuttons/systembuttons.c:519
-msgid "Exit"
+#. don't translate 'tip|'
+#: plugins/systembuttons/systembuttons.c:172
+msgid "tip|Exit"
 msgstr "Afsluiten"
 
-#: plugins/systembuttons/systembuttons.c:172
-#: plugins/systembuttons/systembuttons.c:520
-msgid "Setup"
+#. don't translate 'tip|'
+#: plugins/systembuttons/systembuttons.c:174
+msgid "tip|Setup"
 msgstr "Instellingen"
 
-#: plugins/systembuttons/systembuttons.c:173
-#: plugins/systembuttons/systembuttons.c:521
-msgid "Info"
+#. don't translate 'tip|'
+#: plugins/systembuttons/systembuttons.c:176
+msgid "tip|Info"
 msgstr "Info"
 
 #. set names to use in option menus
-#: plugins/systembuttons/systembuttons.c:518
+#: plugins/systembuttons/systembuttons.c:521
 msgid "Lock"
 msgstr "Schermbeveiliging"
 
-#: plugins/systembuttons/systembuttons.c:550
+#: plugins/systembuttons/systembuttons.c:522
+msgid "Exit"
+msgstr "Afsluiten"
+
+#: plugins/systembuttons/systembuttons.c:523
+msgid "Setup"
+msgstr "Instellingen"
+
+#: plugins/systembuttons/systembuttons.c:524
+msgid "Info"
+msgstr "Info"
+
+#: plugins/systembuttons/systembuttons.c:553
 msgid "Button 1:"
 msgstr "Knop 1:"
 
-#: plugins/systembuttons/systembuttons.c:565
+#: plugins/systembuttons/systembuttons.c:568
 msgid "Button 2:"
 msgstr "Knop 2:"
 
 #. checkbox
-#: plugins/systembuttons/systembuttons.c:579
+#: plugins/systembuttons/systembuttons.c:582
 msgid "_Hide"
 msgstr "_Verbergen"
 
-#: plugins/systembuttons/systembuttons.c:617
+#: plugins/systembuttons/systembuttons.c:620
 msgid "System buttons"
 msgstr "Systeemknoppen"
 
