--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,10 @@
 NEWS for xfce4-panel
 ====================
 
+4.2.1.1
+=======
+- Fix bad bug where panel configuration was lost when saving the session
+
 4.2.1
 =====
 - Save config file changes only on exit; this helps a bit when plugins crash
